--- a/templates/login.html
+++ b/templates/login.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
+<link rel="stylesheet" href={{ css }}>
 <img src={{ image }}>
 <h1>Аварийный доступ</h1>
 <form action="" method="post" novalidate>
